@@ -43,7 +43,7 @@ filter Add-IisServerManagerMember
     )
     
     $InputObject | 
-        Add-Member -MemberType NoteProperty -Name 'ServerManager' -Value $mgr -PassThru |
+        Add-Member -MemberType NoteProperty -Name 'ServerManager' -Value $ServerManager -PassThru |
         Add-Member -MemberType ScriptMethod -Name 'CommitChanges' -Value { $this.ServerManager.CommitChanges() }
         
     if( $PassThru )
